# idutils

./: .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  docker-compose.yml  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml  tests.yml
docs/: conf.py  index.rst
idutils/: __init__.py  config.py  detectors.py  ext.py  normalizers.py  proxies.py  schemes.py  utils.py  validators.py  version.py
tests/: __init__.py  conftest.py  test_custom_scheme_registry.py  test_idutils.py  test_raise_deprecation_warning.py
tests/mock_module/: custom_schemes.py  filters.py  normalizers.py
