# -*- coding: utf-8 -*-
#
# This file is part of IDUtils
# Copyright (C) 2016 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# IDUtils is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.
#
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization
# or submit itself to any jurisdiction.

[metadata]
name = idutils
version = attr: idutils.__version__
description = "Small library for persistent identifiers used in scholarly communication."
long_description = file: README.rst, CHANGES.rst
keywords = persistent identifiers
license = Revised BSD License
author = Invenio Software
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/idutils
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    six>=1.10
    isbnlib>=3.10.8

[options.extras_require]
tests =
    pytest-cache>=1.0
    pytest-runner>=2.6.2
    pytest-invenio>=1.4.0
    Sphinx>=4.2.0
# Kept for backwards compatibility
docs =
[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[bdist_wheel]
universal = 1

