# -*- coding: utf-8 -*-
#
# This file is part of IDUtils
# Copyright (C) 2016 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# IDUtils is free software; you can redistribute it and/or modify
# it under the terms of the Revised BSD License; see LICENSE file for
# more details.
#
# In applying this license, CERN does not waive the privileges and immunities
# granted to it by virtue of its status as an Intergovernmental Organization
# or submit itself to any jurisdiction.

[metadata]
name = idutils
version = attr: idutils.__version__
description = "Small library for persistent identifiers used in scholarly communication."
long_description = file: README.rst, CHANGES.rst
keywords = persistent identifiers
license = Revised BSD License
author = Invenio Software
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/idutils
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    importlib-metadata>=5.0  # remove when Python >=3.12
    isbnlib>=3.10.8
    rfc3987>=1.3.8

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-cache>=1.0
    pytest-invenio>=1.4.0  # required for fixtures
    pytest-runner>=2.6.2
    sphinx>=4.5
# Kept for backwards compatibility
docs =

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[bdist_wheel]
universal = 1

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=idutils --cov-report=term-missing
testpaths = tests idutils
